@@ -932,41 +932,53 @@ static unsigned int snd_hda_calc_stream_format(struct mpxplay_audioout_info_s *a
 //-------------------------------------------------------------------------
 static pci_device_s intelhda_devices[]={
  {"Intel CPT6",   0x8086, 0x1c20, AZX_DRIVER_PCH },
- {"Intel CPT7",   0x8086, 0x1d20, AZX_DRIVER_PCH },
- {"Intel PCH",    0x8086, 0x1e20, AZX_DRIVER_PCH },
- {"Intel PCH",    0x8086, 0x8c20, AZX_DRIVER_PCH },
- {"Intel PCH",    0x8086, 0x8ca0, AZX_DRIVER_PCH },
- {"Intel PCH",    0x8086, 0x8d20, AZX_DRIVER_PCH },
- {"Intel PCH",    0x8086, 0x8d21, AZX_DRIVER_PCH },
- {"Intel PCH",    0x8086, 0x9c20, AZX_DRIVER_PCH },
- {"Intel PCH",    0x8086, 0x9c21, AZX_DRIVER_PCH },
- {"Intel PCH",    0x8086, 0x9ca0, AZX_DRIVER_PCH },
- {"Intel SCH",    0x8086, 0x0a0c, AZX_DRIVER_HDMI },
- {"Intel SCH",    0x8086, 0x0c0c, AZX_DRIVER_HDMI },
- {"Intel SCH",    0x8086, 0x0d0c, AZX_DRIVER_HDMI },
- {"Intel SCH",    0x8086, 0x160c, AZX_DRIVER_HDMI },
- {"Intel SCH",    0x8086, 0x3b56, AZX_DRIVER_SCH },
- {"Intel SCH",    0x8086, 0x3b57, AZX_DRIVER_SCH },
- {"Intel SCH",    0x8086, 0x811b, AZX_DRIVER_SCH },
- {"Intel SCH",    0x8086, 0x080a, AZX_DRIVER_SCH },
- {"Intel PCH",    0x8086, 0x0f04, AZX_DRIVER_PCH },
- {"Intel PCH",    0x8086, 0x2284, AZX_DRIVER_PCH },
+ {"Intel CPT7 (PBG)",            0x8086, 0x1d20, AZX_DRIVER_PCH },
+ {"Intel PCH (Panther Point)",   0x8086, 0x1e20, AZX_DRIVER_PCH },
+ {"Intel PCH (Lynx Point)",      0x8086, 0x8c20, AZX_DRIVER_PCH },
+ {"Intel PCH (9 Series)",        0x8086, 0x8ca0, AZX_DRIVER_PCH },
+ {"Intel PCH (Wellsburg)",       0x8086, 0x8d20, AZX_DRIVER_PCH },
+ {"Intel PCH (Wellsburg)",       0x8086, 0x8d21, AZX_DRIVER_PCH },
+ {"Intel PCH (Lewisburg)",       0x8086, 0xa1f0, AZX_DRIVER_PCH },
+ {"Intel PCH (Lewisburg)",       0x8086, 0xa270, AZX_DRIVER_PCH },
+ {"Intel PCH (Lynx Point-LP)",   0x8086, 0x9c20, AZX_DRIVER_PCH },
+ {"Intel PCH (Lynx Point-LP)",   0x8086, 0x9c21, AZX_DRIVER_PCH },
+ {"Intel PCH (Wildcat Point-LP)",0x8086, 0x9ca0, AZX_DRIVER_PCH },
+ {"Intel PCH (Sunrise Point)",   0x8086, 0xa170, AZX_DRIVER_PCH },
+ {"Intel PCH (Sunrise Point-LP)",0x8086, 0x9d70, AZX_DRIVER_PCH },
+ {"Intel PCH (Kabylake)",        0x8086, 0xa171, AZX_DRIVER_PCH },
+ {"Intel PCH (Kabylake-LP)",     0x8086, 0x9d71, AZX_DRIVER_PCH },
+ {"Intel PCH (Kabylake-H)",      0x8086, 0xa2f0, AZX_DRIVER_PCH },
+ {"Intel PCH (Broxton-P)",       0x8086, 0x5a98, AZX_DRIVER_PCH },
+ {"Intel PCH (Broxton-T)",       0x8086, 0x1a98, AZX_DRIVER_PCH },
+ {"Intel HDMI (Haswell)",        0x8086, 0x0a0c, AZX_DRIVER_HDMI },
+ {"Intel HDMI (Haswell)",        0x8086, 0x0c0c, AZX_DRIVER_HDMI },
+ {"Intel HDMI (Haswell)",        0x8086, 0x0d0c, AZX_DRIVER_HDMI },
+ {"Intel HDMI (Broadwell)",      0x8086, 0x160c, AZX_DRIVER_HDMI },
+ {"Intel SCH (5 Series/3400)",   0x8086, 0x3b56, AZX_DRIVER_SCH },
+ {"Intel SCH",                   0x8086, 0x3b57, AZX_DRIVER_SCH }, // ???
+ {"Intel SCH (Poulsbo)",         0x8086, 0x811b, AZX_DRIVER_SCH },
+ {"Intel SCH (Oaktrail)",        0x8086, 0x080a, AZX_DRIVER_SCH },
+ {"Intel PCH (BayTrail)",        0x8086, 0x0f04, AZX_DRIVER_PCH },
+ {"Intel PCH (Braswell)",        0x8086, 0x2284, AZX_DRIVER_PCH },
  {"Intel ICH6",   0x8086, 0x2668, AZX_DRIVER_ICH },
- {"Intel ESB2",   0x8086, 0x269a, AZX_DRIVER_ICH },
  {"Intel ICH7",   0x8086, 0x27d8, AZX_DRIVER_ICH },
+ {"Intel ESB2",   0x8086, 0x269a, AZX_DRIVER_ICH },
  {"Intel ICH8",   0x8086, 0x284b, AZX_DRIVER_ICH },
  {"Intel ICH",    0x8086, 0x2911, AZX_DRIVER_ICH },
  {"Intel ICH9",   0x8086, 0x293e, AZX_DRIVER_ICH },
  {"Intel ICH9",   0x8086, 0x293f, AZX_DRIVER_ICH },
- {"Intel ICH",    0x8086, 0x3a3e, AZX_DRIVER_ICH },
- {"Intel ICH",    0x8086, 0x3a6e, AZX_DRIVER_ICH },
+ {"Intel ICH10",  0x8086, 0x3a3e, AZX_DRIVER_ICH },
+ {"Intel ICH10",  0x8086, 0x3a6e, AZX_DRIVER_ICH },
  {"ATI SB450",    0x1002, 0x437b, AZX_DRIVER_ATI },
  {"ATI SB600",    0x1002, 0x4383, AZX_DRIVER_ATI },
- {"AMD Hudson",   0x1022, 0x780d, AZX_DRIVER_ATI },
+ {"AMD Hudson",   0x1022, 0x780d, AZX_DRIVER_ATI }, // FIXME: AZX_DRIVER_GENERIC?
+ {"ATI HDNS",     0x1002, 0x1308, AZX_DRIVER_ATIHDMI_NS },
+ {"ATI HDNS",     0x1002, 0x157a, AZX_DRIVER_ATIHDMI_NS },
  {"ATI RS600",    0x1002, 0x793b, AZX_DRIVER_ATIHDMI },
  {"ATI RS690",    0x1002, 0x7919, AZX_DRIVER_ATIHDMI },
  {"ATI RS780",    0x1002, 0x960f, AZX_DRIVER_ATIHDMI },
  {"ATI RS880",    0x1002, 0x970f, AZX_DRIVER_ATIHDMI },
+ {"ATI HDNS",     0x1002, 0x9840, AZX_DRIVER_ATIHDMI_NS },
  {"ATI R600",     0x1002, 0xaa00, AZX_DRIVER_ATIHDMI },
  {"ATI RV630",    0x1002, 0xaa08, AZX_DRIVER_ATIHDMI },
  {"ATI RV610",    0x1002, 0xaa10, AZX_DRIVER_ATIHDMI },
@@ -989,11 +1001,26 @@ static pci_device_s intelhda_devices[]={
  {"ATI HDNS",     0x1002, 0xaaa0, AZX_DRIVER_ATIHDMI_NS },
  {"ATI HDNS",     0x1002, 0xaaa8, AZX_DRIVER_ATIHDMI_NS },
  {"ATI HDNS",     0x1002, 0xaab0, AZX_DRIVER_ATIHDMI_NS },
+ {"ATI HDNS",     0x1002, 0xaac0, AZX_DRIVER_ATIHDMI_NS },
+ {"ATI HDNS",     0x1002, 0xaac8, AZX_DRIVER_ATIHDMI_NS },
+ {"ATI HDNS",     0x1002, 0xaad8, AZX_DRIVER_ATIHDMI_NS },
+ {"ATI HDNS",     0x1002, 0xaae8, AZX_DRIVER_ATIHDMI_NS },
+ {"ATI HDNS",     0x1002, 0xaae0, AZX_DRIVER_ATIHDMI_NS },
+ {"ATI HDNS",     0x1002, 0xaaf0, AZX_DRIVER_ATIHDMI_NS },
  {"VIA 82xx",     0x1106, 0x3288, AZX_DRIVER_VIA },
  {"VIA 7122",     0x1106, 0x9170, AZX_DRIVER_GENERIC },
  {"VIA 6122",     0x1106, 0x9140, AZX_DRIVER_GENERIC },
  {"SIS 966",      0x1039, 0x7502, AZX_DRIVER_SIS },
  {"ULI M5461",    0x10b9, 0x5461, AZX_DRIVER_ULI },
+ {"Teradici",     0x6549, 0x1200, AZX_DRIVER_TERA },
+ {"Teradici",     0x6549, 0x2200, AZX_DRIVER_TERA },
+ {"CT HDA",       0x1102, 0x0010, AZX_DRIVER_CTHDA },
+ {"CT HDA",       0x1102, 0x0012, AZX_DRIVER_CTHDA },
+ {"Creative",     0x1102, 0x0009, AZX_DRIVER_GENERIC },
+ {"CMedia",       0x13f6, 0x5011, AZX_DRIVER_CMEDIA },
+ {"Vortex86MX",   0x17f3, 0x3010, AZX_DRIVER_GENERIC },
+ {"VMwareHD",     0x15ad, 0x1977, AZX_DRIVER_GENERIC },
+
  {"NVidia MCP51", 0x10de, 0x026c, AZX_DRIVER_NVIDIA },
  {"NVidia MCP55", 0x10de, 0x0371, AZX_DRIVER_NVIDIA },
  {"NVidia MCP61", 0x10de, 0x03e4, AZX_DRIVER_NVIDIA },
@@ -1016,14 +1043,6 @@ static pci_device_s intelhda_devices[]={
  {"NVidia MCP",   0x10de, 0x0d95, AZX_DRIVER_NVIDIA },
  {"NVidia MCP",   0x10de, 0x0d96, AZX_DRIVER_NVIDIA },
  {"NVidia MCP",   0x10de, 0x0d97, AZX_DRIVER_NVIDIA },
- {"Teradici",     0x6549, 0x1200, AZX_DRIVER_TERA },
- {"Teradici",     0x6549, 0x2200, AZX_DRIVER_TERA },
- {"CT HDA",       0x1102, 0x0010, AZX_DRIVER_CTHDA },
- {"CT HDA",       0x1102, 0x0012, AZX_DRIVER_CTHDA },
- {"Creative",     0x1102, 0x0009, AZX_DRIVER_GENERIC },
- {"CMedia",       0x13f6, 0x5011, AZX_DRIVER_CMEDIA },
- {"Vortex86MX",   0x17f3, 0x3010, AZX_DRIVER_GENERIC },
- {"VMwareHD",     0x15ad, 0x1977, AZX_DRIVER_GENERIC },
  //{"AMD Generic",  0x1002, 0x0000, AZX_DRIVER_GENERIC }, // ??? cannot define this
 
  {NULL,0,0,0}
@@ -1069,10 +1088,9 @@ static const char *ihd_search_vendorname(unsigned int vendorid)
 static void INTELHD_card_info(struct mpxplay_audioout_info_s *aui)
 {
  struct intelhd_card_s *card=(struct intelhd_card_s *)aui->card_private_data;
- sprintf(aui->infostr,"IHD: %s (%4.4X%4.4X) -> %s (%8.8X) (max %ldkHz/%dbit%s/%dch)\n",
+ sprintf(aui->infostr,"IHD: %s [%s] (max %ldkHz/%dbit%s/%dch)",
          card->pci_dev->device_name,
-         (unsigned int)card->pci_dev->vendor_id,(unsigned int)card->pci_dev->device_id,
-         ihd_search_vendorname(card->codec_vendor_id>>16),(unsigned int)card->codec_vendor_id,
+         ihd_search_vendorname(card->codec_vendor_id>>16),
          (card->supported_max_freq/1000),card->supported_max_bits,
          ((card->supported_formats==0xffffffff)? "?":""),
          min(INTHD_MAX_CHANNELS,PCM_MAX_CHANNELS)
